tests/baselines/reference/numericIndexerConstraint1.errors.txt
==== tests/cases/compiler/numericIndexerConstraint1.ts (1 errors) ====
    class Foo { foo() { } }
    var x: { [index: string]: number; };
    var result: Foo = x["one"]; // error
        ~~~~~~~~~~~~~~~~~~~~~~
!!! numericIndexerConstraint1.ts(3,5): error TS2012: Cannot convert 'number' to 'Foo':
!!! 	Type 'Number' is missing property 'foo' from type 'Foo'.
    